// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputPrompt > command search (Ctrl+R when not in shell) > expands and collapses long suggestion via Right/Left arrows > command-search-collapsed-match 1`] = `
"[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;203;166;247m(r:)  [39m[48;2;58;58;58m [49m[38;2;108;112;134m Type your message or @path/to/file[39m
[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────────────────────────[39m
  [38;2;203;166;247m> lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll[38;2;61;65;73m → [39m
    [38;2;203;166;247mlllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll[39m
    [38;2;203;166;247m...[39m"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > expands and collapses long suggestion via Right/Left arrows > command-search-expanded-match 1`] = `
"[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;203;166;247m(r:)  [39m[48;2;58;58;58m [49m[38;2;108;112;134m Type your message or @path/to/file[39m
[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────────────────────────[39m
  [38;2;203;166;247m> lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll[38;2;61;65;73m ← [39m
    [38;2;203;166;247mlllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll[39m
    [38;2;203;166;247mllllllllllllllllllllllllllllllllllllllllllllllllll[39m"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > renders match window and expanded view (snapshots) > command-search-collapsed-match 1`] = `
"[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;203;166;247m(r:)  [39mcommit[48;2;58;58;58m [49m​
[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────────────────────────[39m
  [38;2;203;166;247m> git [38;2;30;30;46mcommit[38;2;203;166;247m -m "feat: add search" in src/app[39m"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > renders match window and expanded view (snapshots) > command-search-expanded-match 1`] = `
"[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;203;166;247m(r:)  [39mcommit[48;2;58;58;58m [49m​
[38;2;137;180;250m────────────────────────────────────────────────────────────────────────────────────────────────────[39m
  [38;2;203;166;247m> git [38;2;30;30;46mcommit[38;2;203;166;247m -m "feat: add search" in src/app[39m"
`;

exports[`InputPrompt > snapshots > should not show inverted cursor when shell is focused 1`] = `
"[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;203;166;247m> [38;2;108;112;134m  Type your message or @path/to/file[39m
[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────────────────────────[39m"
`;

exports[`InputPrompt > snapshots > should render correctly in shell mode 1`] = `
"[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;108;112;134m! [39m[48;2;58;58;58m [49m[38;2;108;112;134m Type your message or @path/to/file[39m
[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────────────────────────[39m"
`;

exports[`InputPrompt > snapshots > should render correctly in yolo mode 1`] = `
"[38;2;139;58;74m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;139;58;74m* [39m[48;2;58;58;58m [49m[38;2;108;112;134m Type your message or @path/to/file[39m
[38;2;139;58;74m────────────────────────────────────────────────────────────────────────────────────────────────────[39m"
`;

exports[`InputPrompt > snapshots > should render correctly when accepting edits 1`] = `
"[38;2;139;117;48m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;139;117;48m> [39m[48;2;58;58;58m [49m[38;2;108;112;134m Type your message or @path/to/file[39m
[38;2;139;117;48m────────────────────────────────────────────────────────────────────────────────────────────────────[39m"
`;
